<resources>

    <string name="app_name">ImageRetriever</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_app">ImageRet</string>
    <string name="logo_descripcion">Logo de la App</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="guardar_pass">Guardar contraseña</string>
    <string name="boton_iniciar">Ingresar</string>
    <string name="title_activity_query">Consulta</string>
    <string name="cabello">Cabello</string>
    <string name="otros">Otros</string>
    <string name="labios">Labios</string>
    <string name="cejas">Cejas</string>
    <string name="orejas">Orejas</string>
    <string name="frente">Frente</string>
    <string name="cabeza">Cabeza</string>
    <string name="pomulos">Pomulos</string>
    <string name="pecas_granos">Pecas/Granos</string>
    <string name="cicatrices">Cicatrices</string>
    <string name="bigotes">Bigotes</string>
    <string name="barba">Barba</string>
    <string name="rostro">Rostro</string>
    <string name="forma">Forma</string>
    <string name="rinomegalia">Rinomegalia</string>
    <string name="raza">Raza</string>
    <string name="color">Color</string>
    <string name="tinte">Tinte</string>
    <string name="cara">Cara</string>
    <string name="lesion">Lesion</string>
    <string name="tamano">Tamaño</string>
    <string name="grupo_racial">Grupo racial</string>
    <string name="nariz">Nariz</string>
    <string name="ojos">Ojos</string>
    <string name="tipo">Tipo</string>
    <string name="enviarBoton">Enviar</string>
    <string name="listaPersonas">Lista de Personas</string>
    <string-array name="cabello_tamanio">
        <item >seleccione una opcion</item>
        <item >calvo</item>
        <item >corto</item>
        <item >largo</item>
        <item >demasiado largo</item>
    </string-array>
    <string-array name="cabello_forma">
        <item >seleccione una opcion</item>
        <item >lacio</item>
        <item >crespo</item>
        <item >ondulado</item>
    </string-array>
    <string-array name="cabello_color">
        <item >seleccione una opcion</item>
        <item >negro</item>
        <item >rubio</item>
        <item >marron</item>
        <item >castaño</item>
        <item >rojizo</item>
    </string-array>
    <string-array name="rostro_color">
        <item >seleccione una opcion</item>
        <item >mestizo</item>
        <item >blanco</item>
        <item >moreno</item>
        <item >rubio</item>
        <item >amarillo</item>
    </string-array>
    <string-array name="ojos_tipo">
        <item >seleccione una opcion</item>
        <item >normales</item>
        <item >saltones</item>
        <item >hundidos</item>
        <item >chinos</item>
    </string-array>
    <string-array name="ojo_color">
        <item >seleccione una opcion</item>
        <item >negros</item>
        <item >cafes</item>
        <item >verdes</item>
        <item >azules</item>
        <item >castaño</item>
        <item >gris</item>
        <item >marrones</item>
    </string-array>
    <string-array name="ojos_tamanio">
        <item >seleccione una opcion</item>
        <item >mediano</item>
        <item >pequeño</item>
        <item >grande</item>
    </string-array>
    <string-array name="ojos_lesion">
        <item >seleccione una opcion</item>
        <item >no presenta</item>
        <item >izquierdo</item>
        <item >derecho</item>
        <item >ambos</item>
    </string-array>
    <string-array name="rostro_forma">
        <item >seleccione una opcion</item>
        <item >larga</item>
        <item >ovalada</item>
        <item >redonda</item>
    </string-array>
    <string-array name="rostro_tamanio">
        <item >seleccione una opcion</item>
        <item >grande</item>
        <item >mediano</item>
        <item >pequeño</item>
    </string-array>
    <string-array name="rostro_raza">
        <item >seleccione una opcion</item>
        <item >blanco</item>
        <item >hispanico</item>
        <item >africano/caribeño</item>
        <item >chino</item>
        <item >arabe</item>
        <item >indio/pakistani/bangali</item>
    </string-array>
	<string-array name="cabello_tinte">
	    <item >seleccione una opcion</item>
	    <item >si tiene</item>
	    <item >no tiene</item>
	</string-array>
    <string-array name="nariz_forma">
        <item >seleccione una opcion</item>
        <item >corta</item>
        <item >larga</item>
        <item >ancha</item>
        <item >senil</item>
        <item >traumatica</item>
        <item >de boxeador</item>
        <item >con fisuras</item>
    </string-array>
    <string-array name="nariz_rinomegalia">
        <item >seleccione una opcion</item>
        <item >ninguna</item>
        <item >grande en todas sus dimensiones</item>
    </string-array>
    <string-array name="nariz_raza">
        <item >seleccione una opcion</item>
        <item >negroide</item>
        <item >mestiza</item>
        <item >asiatica</item>
    </string-array>
    <string-array name="otros_labios">
        <item >seleccione una opcion</item>
        <item >pequeños</item>
        <item >medianos</item>
        <item >gruesos</item>
        <item >delgados</item>
    </string-array>
    <string-array name="otros_cejas">
        <item >seleccione una opcion</item>
        <item >arqueadas</item>
        <item >largas</item>
        <item >gruesas</item>
        <item >finas</item>
        <item >rectas</item>
    </string-array>
    <string-array name="otros_orejas">
        <item >seleccione una opcion</item>
        <item >redondas</item>
        <item >largas</item>
        <item >pequeñas</item>
        <item >puntiagudas</item>
        <item >pegadas a la cara</item>
    </string-array>
    <string-array name="otros_frente">
        <item >seleccione una opcion</item>
        <item >cuadrada</item>
        <item >ancha</item>
        <item >estrecha</item>
        <item >ovalada</item>
        <item >cuadrada</item>
        <item >trapezoidal</item>
    </string-array>
    <string-array name="otros_cabeza">
        <item >seleccione una opcion</item>
        <item >mediana</item>
        <item >pequeña</item>
        <item >grande</item>
    </string-array>
    <string-array name="otros_pomulos">
        <item >seleccione una opcion</item>
        <item >altos</item>
        <item >bajos</item>
        <item >centrados</item>
        <item >pequeños</item>
    </string-array>
    <string-array name="otros_pecas_granos">
        <item >seleccione una opcion</item>
        <item >no presenta</item>
        <item >mejilla izquierda</item>
        <item >mejilla derecha</item>
        <item >todo el rostro</item>
    </string-array>
    <string-array name="otros_cicatrices">
        <item >seleccione una opcion</item>
        <item >no presenta</item>
        <item >mejilla izquierda</item>
        <item >mejilla derecha</item>
        <item >ambas mejillas</item>
    </string-array>
    <string-array name="otros_bigotes">
        <item >seleccione una opcion</item>
        <item >no presenta</item>
        <item >poco</item>
        <item >bastante</item>
        <item >mas o menos</item>
    </string-array>
    <string-array name="otros_barba">
        <item >seleccione una opcion</item>
        <item >no presenta</item>
        <item >poco</item>
        <item >alrededor de labios/poco</item>
        <item >alrededor de labios/bastante</item>
        <item >hasta las patillas/poco</item>
        <item >hasta las patillas/bastante</item>
    </string-array>
</resources>
